# aergere

./: Makefile  README.md  pyproject.toml
src/aergere/: aergere.py  board.py  main.py  test_aergere.py  test_board.py
