[project]
name = "aergere"
version = "0.1.0"
description = "Mensch ärgere Dich nicht implementation"
authors = [
    { name = "elh", email = "elh.is.online@gmail.com" }
]
dependencies = [
    "pytest>=8.3.3",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.scripts]
aergere = 'aergere.main:main'

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/aergere"]

[tool.ruff]
line-length = 120
